--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ classifiers = [
 dependencies = [
     "mcp>=1.23.1",
     "pyyaml>=6.0.3",
+    "pydantic>=2.0.0",
 ]
 
 [project.optional-dependencies]
